--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <h1>Hello, World!</h1>
 
     <!-- Image tag to insert a photo -->
-    <img src="thala07.jpg" alt="#thala">
+    <img src="thala07.png" alt="#thala">
 
 </body>
 </html>
