--- a/index.html
+++ b/index.html
@@ -1,13 +1,21 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   
+    <meta charset='utf-8'>
+    <meta http-equiv='X-UA-Compatible' content='IE=edge'>
+    <title>Page Title</title>
+    <meta name='viewport' content='width=device-width, initial-scale=1'>
+    <link rel='stylesheet' type='text/css' media='screen' href='main.css'>
+    <script src='script.js'></script>
 </head>
 <body>
-
-    <img src="thala07.png" alt="#thala">
-
+    <h2>Input Form</h2>
+    <form>
+        <label for="userInput">Enter Your Input :</label>
+        <input type="text" id="userInput" name="userInput" required>
+        <button type="button" onclick="checkInput()">Check</button>
+    </form>
+    <div id="output"></div>
+                    
 </body>
 </html>
