--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 </head>
 <body>
     <video autoplay muted loop id="myVideo">
-        <source src="your-video-file.mp4" type="video/mp4">
+        <source src="#7.mp4" type="video/mp4">
         Your browser does not support the video tag.
     </video>
 
