--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
             align-items: center;
             justify-content: center;
             height: 100vh;
+            background: linear-gradient(45deg, #FF4500, #FF6600, #FF8800, #FFAA00, #FFCC00, #FFEB3B, #FFEE58, #FFF176, #FFF59D, #FFF9C4);
         }
 
         video {
@@ -26,37 +27,47 @@
             z-index: -1;
         }
 
-        h2, form, #output {
-            text-align: center;
-            color: #fff;
+        .transparent-box {
+            position: relative;
             z-index: 1;
+        }
+
+        .transparent-box, h1, h3, form, #output {
+            color: #000000;
+        }
+
+        .transparent-box {
+            background-color: rgba(255, 255, 255, 0.5); /* Transparent white background */
+            padding: 20px;
+            border-radius: 10px; /* Rounded corners */
+            text-align: center;
+            backdrop-filter: blur(10px); /* Blur effect */
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.3); /* Box shadow for a subtle effect */
+        }
+
+        form {
+            margin-top: 40px;
         }
     </style>
 </head>
 <body>
-    <video autoplay muted loop id="myVideo">
-        <source src="#7.mp4" type="video/mp4">
-        Your browser does not support the video tag.
-    </video>
 
-    <h2>Input Form</h2>
+<video autoplay muted loop id="myVideo">
+  <source src="thala7.mp4" type="video/mp4">
+  Your browser does not support the video tag.
+</video>
+
+<div class="transparent-box">
+    <h1>Thala For A Reason Or Not?</h1>
+    <h3>Check Here</h3>
     <form>
-        <label for="userInput">Enter Your Input :</label>
+        <label for="userInput">Enter Your Input :</label><br>
         <input type="text" id="userInput" name="userInput" required>
         <button type="button" onclick="checkInput()">Check</button>
     </form>
     <div id="output"></div>
+</div>
 
-    <script src='script.js'></script>
-
-    <script>
-        document.addEventListener('DOMContentLoaded', function () {
-            var video = document.getElementById('myVideo');
-
-            video.addEventListener('error', function (event) {
-                console.error('Error loading the video:', event);
-            });
-        });
-    </script>
+<script src='script.js'></script>
 </body>
 </html>
