--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
     <title>THALA #7</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
+    <script src="https://kit.fontawesome.com/d6b5dad2b1.js" crossorigin="anonymous"></script>
     <style>
         body {
             margin: 0;
@@ -16,6 +17,7 @@
             height: 100vh;
             background: linear-gradient(45deg, #FF4500, #FF6600, #FF8800, #FFAA00, #FFCC00, #FFEB3B, #FFEE58, #FFF176, #FFF59D, #FFF9C4);
         }
+
         video {
             position: fixed;
             top: 0;
@@ -25,13 +27,16 @@
             object-fit: cover;
             z-index: -1;
         }
+
         .transparent-box {
             position: relative;
             z-index: 1;
         }
-        .transparent-box, h1, h3, form, #output {
+
+        .transparent-box, h1, h3, form {
             color: #000000;
         }
+
         .transparent-box {
             background-color: rgba(255, 255, 255, 0.5); /* Transparent white background */
             padding: 20px;
@@ -40,8 +45,39 @@
             backdrop-filter: blur(10px); /* Blur effect */
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.3); /* Box shadow for a subtle effect */
         }
+
         form {
             margin-top: 40px;
+        }
+
+        #output {
+            margin-top: 20px;
+            padding: 10px;
+            background-color: #ffffff;
+            color: #333333;
+            border-radius: 5px;
+            box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
+        }
+
+        .social-buttons {
+            position: fixed;
+            bottom: 20px;
+            right: 20px;
+            display: flex;
+            gap: 10px;
+        }
+
+        .social-button {
+            width: 40px;
+            height: 40px;
+            background-color: #e9e4e4;
+            border-radius: 50%;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            color: #ffffff;
+            text-decoration: none;
+            font-size: 18px;
         }
     </style>
 </head>
@@ -61,6 +97,12 @@
         <button type="button" onclick="checkInput()">Check</button>
     </form>
     <div id="output"></div>
+</div>
+
+<div class="social-buttons">
+    <a href="https://www.linkedin.com/in/dev-mer-424565288/" class="social-button" title="LinkedIn"><i class="fa-brands fa-linkedin-in fa-fade" style="color: #150e46;"></i></a>
+    <a href="mailto:djkhatri.dev@proton.me" class="social-button" title="mail"><i class="fa-solid fa-at fa-spin" style="color: #150e46;"></i></a>
+    <a href="https://www.instagram.com/_0xdj/" class="social-button" title="Instagram"><i class="fa-brands fa-instagram fa-beat-fade fa-xl" style="color: #150e46;"></i></a>
 </div>
 
 <script src='script.js'></script>
