--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 </div>
 
 <div class="social-buttons">
-    <a href="mailto:djkhatri.dev@proton.me" class="social-button" title="mail"><i class="fa-solid fa-at fa-spin" style="color: #150e46;"></i></a>
+    <a href="mailto:djkhatri.dev@proton.me" class="social-button" title="mail">Contact Me:<i class="fa-solid fa-at fa-spin" style="color: #150e46;"></i></a>
 </div>
 
 <script src='script.js'></script>
