--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
     <form>
         <label for="userInput">Enter Your Input :</label><br>
         <input type="text" id="userInput" name="userInput" required>
-        <button type="button" onclick="checkInput()">Check</button>
+        <button type="submit" onclick="checkInput()">Check</button>
     </form>
     <div id="output"></div>
 </div>
